[package]
name = "phpass"
version = "0.1.1"
authors = ["Joshua Koudys <jkoudys@gmail.com>"]
edition = "2018"
license = "MIT"
description = "PHPass, the WordPress password hasher, re-implemented in rust"
homepage = "https://github.com/clausehound/phpass"
repository = "https://github.com/clausehound/phpass"
readme = "README.md"
documentation = "https://github.com/clausehound/phpass"
keywords = ["wordpress", "phpass", "password", "salt", "hash"]

[dependencies]
md5 = "^0.7"
base64 = "^0.12"
