[package]
name = "phpass"
version = "0.1.4"
authors = ["Joshua Koudys <jkoudys@gmail.com>"]
edition = "2021"
license = "MIT"
description = "PHPass, the WordPress password hasher, re-implemented in rust"
homepage = "https://github.com/clausehound/phpass"
repository = "https://github.com/clausehound/phpass"
readme = "README.md"
documentation = "https://github.com/clausehound/phpass"
keywords = ["wordpress", "phpass", "password", "salt", "hash"]

[dependencies]
base64-compat = "1.0.0"
md5 = "^0.7"
rand = "0.8.5"
